# smudgeplot

./: .RData  .Rhistory  .gitignore  .travis.yml  DESCRIPTION  DEVELOPMENT.md  FAQ.md  MANIFEST.in  Makefile  NAMESPACE  README.md  blurplot.R  gene_core.h  hetkmers.py  hetkmers2.py  install.R  kmer_cov_cutoff.R  libfastk.c  playground.R  pyproject.toml  requirements.txt  setup.py  smu_plot.R.h  smudge_2d_hist.py  smudgedata.py  smudgeplot.R  smudgeplot.py  smudgeplot_conda_environment.yml
.github/ISSUE_TEMPLATE/: a-bug.md  feature-request.md  smudgeplot-inference-problem.md  smudgeplot-interpretation.md
.github/workflows/: build.yml  build_pip.yml  publish.yml
R/: annotate_peaks.R  annotate_summits.R  bw.nrdW.R  coverage_histogram.R  estimate_1n_coverage.R  estimate_1n_coverage_1d_subsets.R  estimate_1n_coverage_highest_peak.R  filter_peak_sizes.R  filter_peaks.R  functions_dump.R  generate_summary.R  get_1d_peaks.R  get_col_ramp.R  get_default_col_ramp.R  get_peak_annotation.R  get_peak_sizes.R  get_peak_summary.R  get_smudge_container.R  get_trinoploid_1n_est.R  guess_genome_structure.R  peak_agregation.R  plot_alt.R  plot_expected_haplotype_structure.R  plot_histograms.R  plot_legend.R  plot_seq_error_line.R  plot_smudgeplot.R  reduce_structure_representation.R  round_minor_variant_cov.R  rounding.R  smudge_annotation_grid_fit.R  smudge_summary.R  smudge_warn.R  smuge_summary.R  smuge_warn.R  transform_minor_variant_cov.R  transform_pair_cov.R  transform_x.R  transform_y.R  wtd.quantile.R
exec/: centrality_plot.R  extract_kmer_pairs  extract_kmer_pairs.py  extract_kmer_pairs_based_on_kmer_sum_and_ratio_zz.py  kmer_cov_cutoff.R  smudgeplot  smudgeplot.R  smudgeplot.py  smudgeplot_plot.R
lib/: cli.py  smudgeplot.py
man/: annotate_peaks.Rd  annotate_summits.Rd  bw.nrdW.Rd  coverage_histogram.Rd  create_smudge_container.Rd  estimate_1n_coverage_1d_subsets.Rd  estimate_1n_coverage_highest_peak.Rd  filter_peak_sizes.Rd  filter_peaks.Rd  generate_summary.Rd  get_1d_peaks.Rd  get_col_ramp.Rd  get_peak_sizes.Rd  get_peak_summary.Rd  get_smudge_container.Rd  get_trinoploid_1n_est.Rd  guess_genome_structure.Rd  peak_agregation.Rd  plot_alt.Rd  plot_expected_haplotype_structure.Rd  plot_histograms.Rd  plot_legend.Rd  plot_seq_error_line.Rd  plot_smudgeplot.Rd  reduce_structure_representation.Rd  round_minor_variant_cov.Rd  rounding.Rd  smudge_summary.Rd  smudge_warn.Rd  transform_minor_variant_cov.Rd  transform_pair_cov.Rd  wtd.quantile.Rd
playground/: BGA_tutorial.md  DEVELOPMENT.md  fooling_around_impossible_locations.R  interactive_console_map.py  interactive_plot_strawberry_full_kmer_families_fooling_around.R  more_away_pairs.py  playground.R  playground.py  popart.R
playground/alternative_fitting/: README.md  alternative_plot_covA_covB.R  alternative_plotting.R  alternative_plotting_functions.R  alternative_plotting_testing.R  pair_clustering.py
scripts/: hetkmers.py  smudgeplot
smudgeplot/: Parser.py  cutoff.py  hetkmers.py  map.py  parser.py  smudgedata.py
src/: PloidyPlot.c  libfastk.h  matrix.h
src/lib/: PloidyList.c  PloidyPlot.c  gene_core.c  gene_core.h
src/smudgeplot/: cli.py  config.py  exceptions.py  smudgeplot.py
src/smudgeplot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src_ploidyplot/: PloidyPlot.c  gene_core.c
tests/: README.md  generatedDumpfileForTesting.py  kmers_in_genome.py  run_smudge_version.sh  test_1d_subset_fitting.py  testthat.R
tests/data/: fake_genome_h1.fa  mflo_smaple_cov_file.tsv
tests/testthat/: test-estimate_1n_coverage_1d_subsets.R  test-fitting.R  test-get-smudge-container.R  test-get_smudge_container.R  test-get_summary.R  test-transform_x.R
