[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smudgeplot"
version = "0.5.1"
description = "Inference of ploidy and heterozygosity structure using whole genome sequencing data"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
keywords = ["smudgeplot", "kmer", "ploidy", "genomics", "bioinformatics"]

# Relaxed Python version - works with 3.9+
requires-python = ">=3.9"

authors = [
  {name = "Kamil S. Jaron", email = "kj11@sanger.ac.uk"},
  {name = "Sam Ebdon", email = "se13@sanger.ac.uk"},
]

maintainers = [
  {name = "Kamil Jaron", email = "kj11@sanger.ac.uk"},
  {name = "Sam Ebdon", email = "se13@sanger.ac.uk"},
]

# Relaxed dependency versions for broader compatibility
dependencies = [
  "numpy>=1.20.0",
  "matplotlib>=3.4.0",
  "pandas>=1.3.0",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/KamilSJaron/smudgeplot"
Documentation = "https://github.com/KamilSJaron/smudgeplot#readme"
Repository = "https://github.com/KamilSJaron/smudgeplot"
Issues = "https://github.com/KamilSJaron/smudgeplot/issues"

[project.scripts]
smudgeplot = "smudgeplot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smudgeplot = ["bin/*"]

[tool.cibuildwheel]
skip = ["*-win32", "*-manylinux_i686", "pp*", "*-musllinux*"]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]

[tool.cibuildwheel.linux]
before-build = "make clean && make"

[tool.cibuildwheel.macos]
before-build = "make clean && make"
